Fix an IME regression for <webview> due to missing IPC message param

The IPC message BrowserPluginHostMsg_ImeFinishComposingText does not have a
parameter for the instance ID of BrowserPlugin and therefore, is dropped on
the browser side inside BrowserPluginMessageFilter. This causes a regression
in (Japanese) IME where clicking during an ongoing composition does not commit.

This CL simply adds the field for instance ID to the IPC message.

BUG=720023

Change-Id: I5fc1b0299d7770210e71ef75f4a4bb38e1d25247