content/renderer/browser_plugin/browser_plugin.cc
@@ -604,7 +604,8 @@ bool BrowserPlugin::FinishComposingText(
   bool keep_selection =
       (selection_behavior == blink::WebInputMethodController::kKeepSelection);
   BrowserPluginManager::Get()->Send(
-      new BrowserPluginHostMsg_ImeFinishComposingText(keep_selection));
+      new BrowserPluginHostMsg_ImeFinishComposingText(
+          browser_plugin_instance_id_, keep_selection));
   // TODO(kochi): This assumes the IPC handling always succeeds.
   return true;
 }
